Live Bee implementation

--- a/1-3-ScansWingAlignment.ipynb
+++ b/1-3-ScansWingAlignment.ipynb
@@ -372,7 +372,7 @@
     "            writer.writeheader()\n",
     "                    \n",
     "        # Loop through all jpg files\n",
-    "        jpg_files = tif_files = [file for file in os.listdir(input_dir) if file.endswith(\".jpg\")]\n",
+    "        jpg_files = [file for file in os.listdir(input_dir) if file.endswith(\".jpg\")]\n",
     "        for filename in tqdm(jpg_files, desc=\"Processing files\", ncols=145):\n",
     "            input_path = input_dir / filename\n",
     "            output_path =  output_wing_dir / filename\n",
