--- a/2-1-LiveBeeLabelCropper.ipynb
+++ b/2-1-LiveBeeLabelCropper.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "c1c8ba6c-04af-4011-b24b-73aa04ea122a",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,7 @@
     "from tqdm import tqdm\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "import shutil\n",
     "import torch\n",
     "import os\n",
     "import cv2\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1306ade7-9cbd-44df-a5e5-0fc6e76bc7c9",
    "metadata": {},
    "outputs": [],
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "de336f6e-92b6-424b-afcc-6ee18ade650e",
    "metadata": {},
    "outputs": [],
@@ -156,16 +157,20 @@
     "\n",
     "    \n",
     "\n",
-    "def crop_label(image, output_dir, jpg_file):\n",
+    "def crop_label(image, output_dir, jpg_file, coords=None):\n",
     "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "    blurred = cv2.medianBlur(gray, 5)\n",
     "\n",
-    "    label_coords = find_white_area(blurred, y_coord=1000, window_size=200, step_size=200, density_threshold=0.99)\n",
-    "    modified_coord = (label_coords[0] + 100, label_coords[1] + 100)\n",
-    "    coords_list = [label_coords, modified_coord]\n",
-    "\n",
+    "    # Take manually chosen coorinates or automaticly identify coorinates\n",
+    "    if coords:\n",
+    "        coords_list = coords\n",
+    "    else:\n",
+    "        label_coords = find_white_area(blurred, y_coord=1000, window_size=200, step_size=200, density_threshold=0.99)\n",
+    "        modified_coord = (label_coords[0] + 100, label_coords[1] + 100)\n",
+    "        coords_list = [label_coords, modified_coord]\n",
+    "        \n",
     "    mask = identify_label(image, coords_list)\n",
-    "\n",
+    "    \n",
     "    mask_box_points, cropped_image = crop_from_mask(mask, image)\n",
     "\n",
     "    if DEBUG: \n",
@@ -218,23 +223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1c01b5d0-be3c-434c-8ebf-47ad18dc9001",
+   "execution_count": 11,
+   "id": "5c66df33-da95-40f6-911c-dc3a2a747a3f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "using device: cpu\n",
-      "WARNING: Output directory already exists.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing files:   8%|██████▊                                                                               | 94/1194 [08:17<4:09:20, 13.60s/it]"
+      "using device: cpu\n"
      ]
     }
    ],
@@ -253,8 +250,32 @@
     "predictor = SAM2ImagePredictor(sam2_model)\n",
     "\n",
     "# Color palette\n",
-    "sns_colors = sns.color_palette(\"hls\", 8)\n",
-    "\n",
+    "sns_colors = sns.color_palette(\"hls\", 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1c01b5d0-be3c-434c-8ebf-47ad18dc9001",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using device: cpu\n",
+      "WARNING: Output directory already exists.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing files: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1194/1194 [03:41<00:00,  5.39it/s]\n"
+     ]
+    }
+   ],
+   "source": [
     "try:\n",
     "    # Ensure the input directory exists\n",
     "    if not os.path.exists(input_dir):\n",
@@ -286,6 +307,92 @@
     "        image = cv2.imread(jpg_file_path)\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "        crop_label(image, output_dir, new_jpg_basename)   \n",
+    "        cv2.destroyAllWindows()\n",
+    "        \n",
+    "# Handle exceptions\n",
+    "except FileNotFoundError as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "except KeyboardInterrupt:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9ddf6014-80bd-4591-8ca6-b28592999aa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define directory for images with manual selected coordinates\n",
+    "manual_dir = data_dir / \"Processed\" / \"LiveBees\" / \"2-LiveWingLabelCropsManuallyImproved\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "921a3526-6ae4-4003-a1b7-85c8749b46e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Output directory already exists.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing files: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1194/1194 [00:32<00:00, 37.00it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "coords = {\"Round01-Hive01-2024_06_05-h01bee36\": ((4324, 1399), (4869, 1814)),\n",
+    "          \"Round02-hive14-2024_06_20-h14b42\": ((3229, 889), (3559, 1304)),\n",
+    "          \"Round02-hive14-2024_06_27-h14b23\": ((3064, 1079), (3374, 1304)),\n",
+    "          \"Round02-hive14-2024_06_27-h14b30\": ((2999, 1194), (3359, 1324)),\n",
+    "          \"Round04-hive34-2024_07_19-h34b25\": ((3124, 634), (3514, 919)),\n",
+    "          \"Round04-hive35-2024_07_23-h35b27\": ((2809, 1034), (3339, 1409))}\n",
+    "            \n",
+    "try:\n",
+    "    # Create the new output directories\n",
+    "    if os.path.exists(manual_dir):\n",
+    "        print(\"WARNING: Output directory already exists.\") \n",
+    "    os.makedirs(manual_dir, exist_ok=True)\n",
+    "    \n",
+    "    # Find all jpg files\n",
+    "    jpg_files = []\n",
+    "    for root, _, files in os.walk(input_dir):\n",
+    "        for file in files:\n",
+    "            if file.endswith(\".JPG\") or file.endswith(\".jpg\"):\n",
+    "                jpg_files.append(os.path.join(root, file))\n",
+    "    \n",
+    "    # Loop through every file\n",
+    "    for jpg_file_path in tqdm(jpg_files, desc=\"Processing files\", ncols=145):\n",
+    "        jpg_basename = os.path.basename(jpg_file_path)\n",
+    "        relative_jpg_path = str(jpg_file_path).removeprefix(str(input_dir)).lstrip(\"/\")\n",
+    "        new_jpg_basename = relative_jpg_path.replace(\"/\", \"-\")\n",
+    "        \n",
+    "        # Skip if output file exists\n",
+    "        if os.path.exists(manual_dir / \"Labels\" / new_jpg_basename):\n",
+    "            continue\n",
+    "\n",
+    "        if new_jpg_basename.removesuffix(\".JPG\") in coords.keys():\n",
+    "            # Process the file using manual coordinates\n",
+    "            coord = coords[new_jpg_basename.removesuffix(\".JPG\")]\n",
+    "            image = cv2.imread(jpg_file_path)\n",
+    "            image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "            crop_label(image, manual_dir, new_jpg_basename, coord)   \n",
+    "            cv2.destroyAllWindows()\n",
+    "    \n",
+    "        else:\n",
+    "            # Copy the image\n",
+    "            source_jpg = output_dir / \"Labels\" / new_jpg_basename\n",
+    "            destination_jpg = manual_dir / \"Labels\" / new_jpg_basename\n",
+    "            shutil.copy(source_jpg, destination_jpg)\n",
     "\n",
     "# Handle exceptions\n",
     "except FileNotFoundError as e:\n",
@@ -298,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ddf6014-80bd-4591-8ca6-b28592999aa2",
+   "id": "f12be7b8-d3b7-4c8f-a401-36b3f6bf853b",
    "metadata": {},
    "outputs": [],
    "source": []
