--- a/1-4-ScansWingOrientation.ipynb
+++ b/1-4-ScansWingOrientation.ipynb
@@ -5,7 +5,7 @@
    "id": "40034265-1235-48f4-8ba5-7aed97930100",
    "metadata": {},
    "source": [
-    "### 1-4-ScansWingFlipper.ipynb\n",
+    "### 1-4-ScansWingOrientation.ipynb\n",
     "\n",
     "Flips upside-down wings by detecting the black color at the top and base of the wing."
    ]
@@ -234,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
