--- a/2-1-LiveBeeLabelCropper.ipynb
+++ b/2-1-LiveBeeLabelCropper.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "### 2-1-LiveBeeLabelCropper.ipynb\n",
-    "\n"
+    "\n",
+    "Identifies the labels on the scaned sheets and saves them."
    ]
   },
   {
