--- a/3-1-ResizePredictions.ipynb
+++ b/3-1-ResizePredictions.ipynb
@@ -5,7 +5,9 @@
    "id": "0c6bef03-6f8b-4887-a79b-9a50ee84f8c9",
    "metadata": {},
    "source": [
-    "### 3-1-ResizePredictions.ipynb "
+    "### 3-1-ResizePredictions.ipynb \n",
+    "\n",
+    "Rezises segmentations using the format of the original image."
    ]
   },
   {
