--- a/3-3-Visualisation.ipynb
+++ b/3-3-Visualisation.ipynb
@@ -5,7 +5,9 @@
    "id": "7b94103e-7762-4122-a794-4a27b1d2f203",
    "metadata": {},
    "source": [
-    "### 3-3-Visualisation.ipynb "
+    "### 3-3-Visualisation.ipynb \n",
+    "\n",
+    "Visualizes semantic segmentation results."
    ]
   },
   {
